@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
title US009 Leaving a message - Domain Model
class Client {
-name
-phoneNumber
}

class Agent {
-role
-citizenCardNumber
-taxNumber
-address
-email
-phone
-agency
-password
}

class Message {
-clientName
-clientPhoneNumber
-preferredDate
-timeSlot
}

Client "1" --> "*" Message : sends
Message "*" --> "1" Agent : available to
@enduml